--- a/AF.AuditTrail.Sample/Site.Master
+++ b/AF.AuditTrail.Sample/Site.Master
@@ -5,7 +5,7 @@
 <head runat="server">
     <title></title>
     <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
-    <%-- <link href="~/Styles/InternalMenu.css" rel="Stylesheet" type="text/css" />--%>
+  
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -24,7 +24,7 @@
                     </td>
                     <td>
                         <div style="color:White">
-                            <asp:LinkButton ID="lnkButton" runat="server" OnClick="Lnk_Click">Logout</asp:LinkButton>
+                            <asp:LinkButton ID="lnkButton" runat="server" OnClick="Lnk_Click">Home</asp:LinkButton>
                         </div>
                     </td>
                 </tr>
